--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -270,13 +270,24 @@ nav ul a:hover {
 }
 
 footer {
-  display: flex;
+  display: flex !important;
   flex-direction: column;
+  filter: drop-shadow(0 0 5px black);
+  -webkit-filter: drop-shadow(0 0 5px black);
 }
 
 .footer_content {
   margin-top: -16px !important;
   padding-bottom: 2rem;
+}
+
+.footer_content ul li a {
+  font-size: 1.1rem;
+  color: #fce4ec;
+  transition: all 100ms linear;
+}
+.footer_content ul li a:hover {
+  text-shadow: 0 0 3px gold;
 }
 
 @media (max-width: 768px) {
